PA3/tests/bad/bad_leq.cl
class Main {
	main() : SELF_TYPE {
		{
			1 <= "Hello";
			self;
		}
	};
};